airflow/logs/dag_id=nba_transform_to_dwh/run_id=manual__2025-06-20T192058.565922+0000/task_id=load_fc_shoot/attempt=2.log
[2025-06-20T19:23:12.473+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-06-20T19:23:12.508+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: nba_transform_to_dwh.load_fc_shoot manual__2025-06-20T19:20:58.565922+00:00 [queued]>
[2025-06-20T19:23:12.517+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: nba_transform_to_dwh.load_fc_shoot manual__2025-06-20T19:20:58.565922+00:00 [queued]>
[2025-06-20T19:23:12.517+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2025-06-20T19:23:12.573+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): load_fc_shoot> on 2025-06-20 19:20:58.565922+00:00
[2025-06-20T19:23:12.579+0000] {standard_task_runner.py:63} INFO - Started process 4858 to run task
[2025-06-20T19:23:12.583+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'nba_transform_to_dwh', 'load_fc_shoot', 'manual__2025-06-20T19:20:58.565922+00:00', '--job-id', '330', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmppri4i4fb']
[2025-06-20T19:23:12.584+0000] {standard_task_runner.py:91} INFO - Job 330: Subtask load_fc_shoot
[2025-06-20T19:23:12.668+0000] {task_command.py:426} INFO - Running <TaskInstance: nba_transform_to_dwh.load_fc_shoot manual__2025-06-20T19:20:58.565922+00:00 [running]> on host 5ea278fdf3a6
[2025-06-20T19:23:12.794+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='nba_transform_to_dwh' AIRFLOW_CTX_TASK_ID='load_fc_shoot' AIRFLOW_CTX_EXECUTION_DATE='2025-06-20T19:20:58.565922+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-06-20T19:20:58.565922+00:00'
[2025-06-20T19:23:12.796+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-06-20T19:23:12.811+0000] {etl_pipeline.py:565} INFO - Ensuring dimension table 'fcshoot' exists...
[2025-06-20T19:23:12.991+0000] {etl_pipeline.py:567} INFO - Loading/updating data into 'fcshoot'...
[2025-06-20T19:23:12.993+0000] {etl_pipeline.py:571} ERROR - Failed to create or load dimension 'fcshoot'. Error: syntax error at or near "tsc"
LINE 13:                         UNIQUE (tsc.xpos, tsc.ypos, dm.match...
                                         ^

[2025-06-20T19:23:12.994+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-06-20T19:23:12.994+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 568, in create_fc_shoot
    cursor.execute(insert_query)
psycopg2.errors.SyntaxError: syntax error at or near "tsc"
LINE 13:                         UNIQUE (tsc.xpos, tsc.ypos, dm.match...
                                         ^

[2025-06-20T19:23:13.006+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=nba_transform_to_dwh, task_id=load_fc_shoot, run_id=manual__2025-06-20T19:20:58.565922+00:00, execution_date=20250620T192058, start_date=20250620T192312, end_date=20250620T192313
[2025-06-20T19:23:13.122+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 330 for task load_fc_shoot (syntax error at or near "tsc"
LINE 13:                         UNIQUE (tsc.xpos, tsc.ypos, dm.match...
                                         ^
; 4858)
[2025-06-20T19:23:13.158+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-06-20T19:23:13.177+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-06-20T19:23:13.206+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
